optimize set iptables on Linux